<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2"
    xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">IdeaPills</string>
    <string name="bubble_over">Done</string>
    <string name="bubble_select_all">All</string>
    <string name="bubble_delete">Delete</string>
    <string name="bubble_edit">Edit</string>
    <string name="bubble_extend_all">Expand all</string>
    <string name="bubble_collapse_all">Collapse all</string>
    <string name="bubble_collapse">Collapse</string>
    <string name="bubble_todo_checkbox">Mark</string>
    <string name="bubble_add">Add</string>
    <string name="bubble_search">Search</string>
    <string name="bubble_hide_todo_over">Hide completed</string>
    <string name="bubble_show_todo_over">Show completed</string>
    <string name="bubble_hide_todo_over_tip">点击按钮可以隐藏已完成胶囊，当前没有已完成的胶囊</string>
    <string name="bubble_show_todo_over_tip">点击按钮可以显示已完成胶囊，当前没有已完成的胶囊</string>
    <string name="bubble_hide">Hide</string>
    <string name="bubble_boom">Big bang</string>
    <string name="bubble_weixin">Wechat</string>
    <string name="bubble_attach">Add attachment</string>
    <string name="bubble_calendar">Add remind</string>
    <string name="bubble_image">Image</string>
    <string name="bubble_file">File</string>
    <string name="bubble_filtrate">Filter by Type</string>
    <string name="text_all">All</string>
    <string name="text_blue">Note</string>
    <string name="text_red">Important matter</string>
    <string name="text_orange">Schedule</string>
    <string name="text_green">Draft message</string>
    <string name="text_purple">Inspiration</string>
    <string name="text_share">Share</string>
    <string name="text_ppt">PPT</string>
    <string name="play_voice">Play voice</string>
    <string name="bubble_item_description">The %dth pill</string>
    <string name="bubble_del_attach">Delete attachment</string>
    <plurals name="bubble_count_attach">
        <item quantity="one">%d Attachment</item>
        <item quantity="other">%d Attachments</item>
    </plurals>
    <string name="bubble_datetime_format">yyyy-MM-dd HH:mm</string>
    <string name="bubble_datetime_format_month">MM-dd HH:mm</string>
    <string name="bubble_datetime_format_day">dd HH:mm</string>
    <string name="bubble_datetime_format_time">HH:mm</string>
    <string name="bubble_datetime_format_year">yyyy-MM-dd</string>
    <string name="bubble_offline_tag">offline</string>
    <string name="bubble_optimize_text">Text will be optimized after connected</string>
    <string name="bubble_delete_single">Delete The Idea Pill</string>
    <string name="bubble_delete_multiple">Do you want to delete selected idea pills?</string>
    <string name="bubble_add_string_limit">Sorry, this operation would make the Idea Pills exceed the character limit. </string>
    <string name="mute_mode_is_turned_on">The Phone is in Mute Mode</string>
    <string name="bubble_boom_twice">You have already triggered Big Bang on same text passage twice, please finish the pill you are editting before proceed to process others</string>
    <string name="bubble_copy">Copy Text</string>
    <string name="text_copied">Text Copied</string>
    <string name="share_to">Idea Pills</string>
    <string name="enable_idea_pills_for_share">Global Idea Pill is not yet enabled</string>
    <string name="enable_idea_pills_goto">Enable</string>
    <string name="toast_for_bubble_receive_by_app">Idea Pill tagged, you can still view it at Idea Pills—Tagged</string>
    <string name="share_unsupport_file_toast_tips">File is not supported</string>
    <string name="search_hint">Search pills</string>
    <string name="select_attachment_type">Please Choose</string>
    <string name="preview_image_attachment_dialog_title">Remove from Attachments</string>
    <string name="preview_image_attachment_dialog_confirm">Remove</string>
    <string name="download_no_application_title">Can\'t open file</string>
    <string name="install">Install</string>
    <string name="install_bigbang_message">Unable to perform this action as Big Bang is not installed. Please tap “Install” to download and install Big Bang.</string>
    <string name="bubble_hint">Click to enter text</string>
    <string name="notification_icon_desc">Reminder has been set</string>
    <string name="bubble_share_tip">Sharing of attachment is not supported yet</string>
    <string name="notify_todo_title">Completed “%s”</string>
    <string name="notify_todo_body">Completed “%s”</string>
    <plurals name="bubble_image_count_attach">
        <item quantity="one">%d Picture Attachment</item>
        <item quantity="other">%d Picture Attachments</item>
    </plurals>
    <string name="drag_empty_tip">The drag content can not be empty</string>
    <string name="bubble_share_attachment_unknown_type">File is not supported</string>
    <string name="bubble_open_attachment_unknown_type">File is not supported</string>
    <string name="sync_share_setting_title">Setting</string>
    <string name="sync_content_wait_message">Please wait...</string>
    <string name="sync_share_main_tip">Once logged in and enabled, you can share your idea pills with another account. Pills you created will show up in their pills list and vice versa. This feature is not supported in lower versions of Smartisan OS.</string>
    <string name="sync_share_read_list_failed_tip">Unable to fetch data</string>
    <string name="sync_share_read_list_failed_summary">Please try again later</string>
    <string name="sync_share_read_list_failed_refresh">Refresh</string>
    <string name="sync_add_share_account">Add Shared Account</string>
    <string name="sync_login_cloud_account">Log In</string>
    <string name="sync_account_detail_title">Account Info</string>
    <string name="sync_share_accept_setting">Allow sharing requests</string>
    <string name="sync_share_setting_failed_tip">Please check your network and try again</string>
    <string name="sync_share_status_confirm">Wait for the acceptance of your request</string>
    <string name="sync_share_status_confirm_invitee">Request accepted</string>
    <string name="sync_share_status_other_refuse">Request rejected</string>
    <string name="sync_share_status_refuse">Rejected</string>
    <string name="sync_share_status_canceled">Sharing cancelled</string>
    <string name="sync_share_invitation_canceled">Request cancelled</string>
    <string name="sync_share_status_accept">Sharing created</string>
    <string name="sync_send_invitation">Send request</string>
    <string name="sync_send_invitation_again">Request again</string>
    <string name="sync_receive_invitation_start_title">Received Requests are as follows:</string>
    <string name="sync_send_invitation_start_title">Sharing request sent, please wait for your request to be accepted</string>
    <string name="sync_account_remark_hint">Set footnote </string>
    <string name="sync_account_set_remark_failed">Unstable network, please check your network and set footnote again</string>
    <plurals name="sync_send_invitation_minite_after">
        <item quantity="one">You can send your request again in %d minutes</item>
        <item quantity="other">You can send your request again in %d minutes</item>
    </plurals>
    <plurals name="sync_send_invitation_hour_after">
        <item quantity="one">You can send your request again in %d hours</item>
        <item quantity="other">You can send your request again in %d hours</item>
    </plurals>
    <string name="sync_send_invitation_cancel">Cancel Request</string>
    <string name="sync_share_cancel">Cancel Sharing</string>
    <string name="sync_share_cancel_tip">Sharing to this account will be removed, do you want to cancel sharing?</string>
    <string name="sync_invite_cancel_tip">Once sharing is cancelled, this change record will be removed. Do you want to cancel sharing?</string>
    <string name="sync_item_share_change_tip">Sharing will be cancelled once you change the color of this pill. Do you want to proceed anyway?</string>
    <string name="sync_request_failed">Request failed</string>
    <string name="sync_receive_invitation_accept">Accept</string>
    <string name="sync_receive_invitation_refuse">Reject</string>
    <string name="sync_delete_account">Delete account</string>
    <string name="sync_phone_email">Phone/Email</string>
    <string name="sync_phone_number">Phone</string>
    <string name="sync_send_invitation_summary">You can share your idea pills to others. Please provide their phone number or email address and send request. This feature is not supported in devices with lower versions</string>
    <string name="sync_send_invitation_country_summary">You can share your idea pills to others. Please provide their phone number and send request. This feature is not supported in devices with lower versions</string>
    <string name="sync_history_shared_account">Previously shared account</string>
    <string name="sync_not_support_multiple_account_tip">Multiple account sharing is not supported in this version</string>
    <string name="sync_not_support_multiperson_tip">The user your requested has already shared their account with other Smiling Cloud account. Thus it is unable to send request now</string>
    <string name="sync_self_not_enabled_yet_tip">Sharing of idea pills is not enabled yet</string>
    <string name="sync_not_enabled_yet_tip">The user rejected your sharing request</string>
    <string name="sync_not_share_self_tip">Unable to share to the same account logged in</string>
    <string name="sync_request_too_frequent_tip">Too many sharing request sent, please wait a moment and try again</string>
    <string name="sync_invitation_phone_register">This phone number have not registered Smartisan ID yet, do you want to invite for registration via text?</string>
    <string name="sync_invitation_email_register">This email have not registered or is incorrect, please check and try again later</string>
    <string name="sync_invitation_sended_tip">Sharing request sent, please wait for your request to be accepted</string>
    <string name="sync_invitation_register_sended_tip">SMS sent</string>
    <string name="sync_invitation_register_send_fail_tip">Failed to send SMS</string>
    <string name="sync_invitation_notification_title">Sharing request from %s received</string>
    <string name="sync_decline_notification_title">%s rejected your sharing request</string>
    <string name="sync_accept_notification_title">%s accepted your sharing request</string>
    <string name="sync_cancel_notification_title">%s cancelled their sharing with you</string>
    <string name="sync_share_ideapills_notification_title">Shared pill from %s received</string>
    <string name="sync_edit_ideapills_notification_title">%s edited a pill</string>
    <string name="sync_todo_over_ideapills_notification_title">%s marked a pill as finished</string>
    <string name="sync_trash_ideapills_notification_title">%s deleted a pill</string>
    <string name="sync_cancel_ideapills_notification_title">%s cancelled a shared pill</string>
    <string name="btn_ok">@*smartisanos:string/notification_warning_dialog_ok_btn</string>
    <string name="sync_invitation_not_exists">No sharing available</string>
    <string name="drag_save_succeed">Saved to idea pills</string>
    <string name="share_to_idea_succeed">Shared to idea pills</string>
    <string name="sync_share_waiting">Wait for your request to be accepted</string>
    <string name="net_error_tips">Network connection failed, please check your network and try again</string>
    <string name="edit_country_name">Regions</string>
    <string name="default_country_name">China</string>
    <string name="international_phone">International Phone</string>
</resources>