<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_optbottons"
    android:layout_width="match_parent"
    android:layout_height="36dp"
    android:layout_below="@+id/view_split_line2"
    android:layout_marginTop="-1dp"
    android:gravity="center"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/iv_bubble_del"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:contentDescription="@string/bubble_delete"
        android:scaleType="center"
        android:src="@drawable/bubble_pop_del" />

    <View
        android:id="@+id/v_line_before_edit"
        android:layout_width="4px"
        android:layout_height="match_parent"
        android:background="@drawable/divider_line_vertical" />

    <ImageView
        android:id="@+id/iv_bubble_edit"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="-1dp"
        android:layout_weight="1"
        android:contentDescription="@string/bubble_boom"
        android:scaleType="center"
        android:src="@drawable/bubble_btn_bang" />

    <View
        android:id="@+id/v_line_before_weixin"
        android:layout_width="4px"
        android:layout_height="match_parent"
        android:background="@drawable/divider_line_vertical" />

    <ImageView
        android:id="@+id/iv_weixin"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="-1dp"
        android:layout_weight="1"
        android:contentDescription="@string/bubble_weixin"
        android:scaleType="center"
        android:src="@drawable/bubble_btn_weixin" />

    <View
        android:layout_width="4px"
        android:layout_height="match_parent"
        android:background="@drawable/divider_line_vertical" />

    <ImageView
        android:id="@+id/iv_attach"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="-1dp"
        android:layout_weight="1"
        android:contentDescription="@string/bubble_attach"
        android:scaleType="center"
        android:src="@drawable/bubble_btn_attach" />

    <View
        android:id="@+id/iv_calendar_divider"
        android:layout_width="4px"
        android:layout_height="match_parent"
        android:background="@drawable/divider_line_vertical" />

    <ImageView
        android:id="@+id/iv_calendar"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="-1dp"
        android:layout_weight="1"
        android:contentDescription="@string/bubble_calendar"
        android:scaleType="center"
        android:src="@drawable/bubble_btn_calendar" />

    <View
        android:id="@+id/iv_bubble_share_divider"
        android:layout_width="4px"
        android:layout_height="match_parent"
        android:background="@drawable/divider_line_vertical" />

    <ImageView
        android:id="@+id/iv_bubble_bullet"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="-1dp"
        android:layout_weight="1"
        android:contentDescription="@*smartisanos:string/bullet_sms_title"
        android:scaleType="center"
        android:src="@drawable/bullet_icon" />

    <View
        android:layout_width="4px"
        android:layout_height="match_parent"
        android:background="@drawable/divider_line_vertical" />

    <ImageView
        android:id="@+id/iv_bubble_share"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="-1dp"
        android:layout_weight="1"
        android:contentDescription="@string/bubble_share"
        android:scaleType="center"
        android:src="@drawable/bubble_share" />
</LinearLayout>