<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_headexpand_detail"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="horizontal"
    android:paddingLeft="14dp"
    android:visibility="gone">

    <com.smartisanos.ideapills.view.BubbleTextView
        android:id="@+id/tv_over"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:paddingLeft="16dp"
        android:paddingRight="12dp"
        android:text="@string/bubble_over"
        android:textColor="#ffffffff"
        android:textSize="@dimen/bubble_item_text_size"
        android:textStyle="bold" />

    <View
        android:id="@+id/iv_bubble_share_divider"
        android:layout_width="4px"
        android:layout_height="36dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/setting_popup_divider_line" />

    <ImageView
        android:id="@+id/iv_bubble_share"
        android:contentDescription="@string/bubble_share"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:gravity="center"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:src="@drawable/bubble_share" />

    <ImageView
        android:id="@+id/iv_trash"
        android:contentDescription="@string/bubble_delete"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:gravity="center"
        android:paddingLeft="6dp"
        android:paddingRight="12dp"
        android:src="@drawable/bubble_pop_del" />

    <View
        android:layout_width="4px"
        android:layout_height="14dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/setting_popup_divider_line" />

    <CheckBox
        android:id="@+id/cb_select_all"
        android:contentDescription="@string/bubble_select_all"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:maxLines="1"
        android:paddingLeft="12dp"
        android:paddingRight="14dp"
        android:text="@string/bubble_select_all"
        android:textColor="#ffffffff"
        android:textSize="@dimen/bubble_item_text_size"
        android:textStyle="bold"
        android:button="@null"
        android:drawableRight="@drawable/bubble_edit_selected"/>
</LinearLayout>